5.3.7 -> 5.4.0:
    - jbj: rpmlib: rescusictate the ISPRAS markup.
    - jbj: rpmdb: rescusictate the ISPRAS markup.
    - jbj: rpmio: add a queue link pointer to all rpm objects.
    - jbj: i18n: update po files (Translation Project).
    - jbj: rpmio: rescusitate the ISPRAS markup.
    - jbj: ISPRAS: upgrade to abi-compliance-checker-1.21.9.
    - jbj: ISPRAS: upgrade to api-sanity-autotest-1.11.
    - jbj: rpmdb: disable Depcache, --install and "make test" todo++.
    - jbj: distcheck: tests: move target from "check" to "test".
    - jbj: distcheck: no globs, only explict lists, for EXTRA_DIST.
    - jbj: distcheck: make internal neon "opt-in", avoid GSS-API wrestling.
    - jbj: verify: fix: NULL fnpyKey caused doubled parentdir/linkto check.
    - jbj: rpmal: add common exit point to control flow.
    - jbj: rpmdb: use Depchache store by default again.
    - jbj: db3: fix: avoid non-root EPERM with temp Depcache close.
    - jbj: db3: adjust event debugging, add DB->cursor() open flags.
    - jbj: rpmdb: rename the dependency cache pseudo-tag.
    - jbj: verify: re-add digest/signature checks.
    - jbj: permit building --without-libtasn1.
    - jbj: check-in arbirtrarytag*.src.rpm for "make dist".
    - jbj: rpm.spec: adjust to reality (popt needs to be in tarball, todo++).

5.3.6 -> 5.3.7:
    - jbj: fix: %config handling broken while refactoring a loop.
    - jbj: rpmmi: lazily instantiate the basenames header set.
    - jbj: re-add the lazy creator avoiding self LOOP's in ordering pkgs
	during installs using parentdir relations.
    - proyvind: rpmts: don't default rootDir to "" if set to NULL, as it
	confusing rpm checks on NULL & "/" only, without "", making ie.
	%posttrans scriptlets fail where NULL is used (mdvbz#61696).
    - jbj: fix memory leak on user lookup error.
    - proyvind: rubygems: only add runtime dependencies (Rémy Clouard).
    - proyvind: export rpmbf.h & rpmgi.h to public API.