@@ -1,8 +1,10 @@
+compat_reports
 descriptors_storage
 header_compile_errors
 Makefile
 Makefile.in
 desc
+logs
 types
 test_results
 tests
