@@ -10,10 +10,6 @@
  
 <libs>
   @abs_top_builddir@/build/.libs/librpmbuild.so
-  @abs_top_builddir@/lib/.libs/librpm.so
-  @abs_top_builddir@/rpmdb/.libs/librpmdb.so
-  @abs_top_builddir@/rpmio/.libs/librpmio.so
-  @abs_top_builddir@/misc/.libs/librpmmisc.so
 </libs>
 
 <include_paths>
@@ -43,5 +39,33 @@
   rpmevr.h
   rpmtag.h
 </include_preamble>
+
 <libs_depend>
+  @abs_top_builddir@/lib/.libs/librpm.so
+  @abs_top_builddir@/rpmdb/.libs/librpmdb.so
+  @abs_top_builddir@/rpmio/.libs/librpmio.so
+  @abs_top_builddir@/misc/.libs/librpmmisc.so
 </libs_depend>
+
+<opaque_types>
+</opaque_types>
+
+<skip_interfaces>
+</skip_interfaces>
+
+<skip_headers>
+  /usr/include/rpm/*.h
+</skip_headers>
+
+<skip_libs>
+</skip_libs>
+
+<libgroup>
+</libgroup>
+
+<out_params>
+</out_params>
+
+<skip_warnings>
+</skip_warnings>
+
